# eecs-thesis-template

./: .envrc  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel
.github/workflows/: publish_proposal.yml  publish_thesis.yml
common/references/: references.bib
common/tex/: commands.tex  globals.tex  packages.tex  setup.tex
proposal/: main.tex
proposal/sections/: 00_cover.tex  01_introduction.tex  02_background.tex  03_project_plan.tex  04_references.tex
src/: main.py
thesis/: main.tex
thesis/sections/00_front_matter/: 00_cover.tex  01_letter.tex  02_acknowledgements.tex  03_abstract.tex
thesis/sections/01_body/: 00_introduction.tex  01_background.tex  02_implementation.tex  03_results.tex  04_discussion.tex  05_conclusion.tex
thesis/sections/02_rear_matter/: 00_appendix.tex
tools/setup/: setup.sh
